--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,9 +21,9 @@
       <nav>
         <ul>
           <li>
-            <a href="/cats">All Cats</a>
+            <a href="{% url "cat-index" %}">All Cats</a>
           </li>
-          <li><a href="/about">About</a></li>
+          <li><a href="{% url "about" %}">About</a></li>
         </ul>
       </nav>
     </header>
