--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,12 +20,32 @@
       </div>
       <nav>
         <ul>
-          <li>
-            <a href="{% url "cat-index" %}">All Cats</a>
-          </li>
-          <li>
-            <a href="{% url "cat-create" %}">Add a Cat</a>
-          </li>
+          {% if user.is_authenticated %}
+            <li>
+              <a href="{% url "cat-index" %}">All Cats</a>
+            </li>
+            <li>
+              <a href="{% url "toy-index" %}">All Toys
+            <li>
+              <a href="{% url "cat-create" %}">Add a Cat</a>
+            </li>
+            <li>
+              <a href="{% url "toy-create" %}">Add a Toy</a>
+            </li>
+            <li>
+              <form action="{% url "logout" %}" method="post" id="logout-form">
+                {% csrf_token %}
+                <button type="submit">Log Out</button>
+              </form>
+            </li>
+          {% else %}
+            <li>
+              <a href="{% url "home" %}">Login</a>
+            </li>
+            <li>
+              <a href="{% url "signup" %}">Sign Up</a>
+            </li>
+          {% endif %}
           <li>
             <a href="{% url "about" %}">About</a>
           </li>
